--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,4 +1,4 @@
 <li>
   {{name}}
-  <button class="delete-burger" data-id="{{this.id}}" data-newDevour="{{this.devoured}}">Devour</button>
+  <button class="delete-burger" data-id="{{this.id}}" data-newdevour="{{devoured}}">Devour</button>
 </li>
