--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,25 +1,26 @@
 <h1>Eat-Da-Burger</h1>
+<div class="col-md=5">
+  <h2>Burgers</h2>
 
-<h2>Burgers</h2>
+  <ul>
+    {{#each burgers}}
+    {{#unless devoured}}
+    {{> burgers/burger-block devoured=true}}
+    {{/unless}}
+    {{/each}}
+  </ul>
+</div>
+<div class="col-md=5">
+  <h2>Devoured</h2>
 
-<ul>
-  {{#each burgers}}
-  {{#unless devoured}}
-  {{> burgers/burger-block devoured=true}}
-  {{/unless}}
-  {{/each}}
-</ul>
-
-<h2>Devoured</h2>
-
-<ul>
-  {{#each burgers}}
-  {{#if devoured}}
-  {{> burgers/burger-block devoured=false}}
-  {{/if}}
-  {{/each}}
-</ul>
-
+  <ul>
+    {{#each burgers}}
+    {{#if devoured}}
+    {{> burgers/burger-block devoured=false}}
+    {{/if}}
+    {{/each}}
+  </ul>
+</div>
 <h2>Add a Burger</h2>
 <form class="create-form">
   <div class="form-group">
