--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 <h1>Eat-Da-Burger</h1>
-<div class="col-md=5">
+<div class="col-md-5">
   <h2>Burgers</h2>
 
   <ul>
@@ -10,7 +10,7 @@
     {{/each}}
   </ul>
 </div>
-<div class="col-md=5">
+<div class="col-md-5">
   <h2>Devoured</h2>
 
   <ul>
