Fix minor typos

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,10 +15,10 @@
 
 <body>
   <div><img src="burger.png" , alt="burger image"> </div>
-  <div container-md>
-    <div class="row">
-      {{{ body }}}
-    </div>
+  <div class="container-md">
+
+    {{{ body }}}
+
   </div>
 </body>
 
