--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,31 +1,35 @@
 <h1>Eat-Da-Burger</h1>
-<div class="col-md-5">
-  <h2>Burgers</h2>
+<div class="row>">
+  <div class="col-md-5">
+    <h2>Burgers</h2>
 
-  <ul>
-    {{#each burgers}}
-    {{#unless devoured}}
-    {{> burgers/burger-block devoured=true}}
-    {{/unless}}
-    {{/each}}
-  </ul>
-</div>
-<div class="col-md-5">
-  <h2>Devoured</h2>
-
-  <ul>
-    {{#each burgers}}
-    {{#if devoured}}
-    {{> burgers/burger-block devoured=false}}
-    {{/if}}
-    {{/each}}
-  </ul>
-</div>
-<h2>Add a Burger</h2>
-<form class="create-form">
-  <div class="form-group">
-    <label for="burg">Burger:</label>
-    <input type="text" id="burg" name="name">
+    <ul>
+      {{#each burgers}}
+      {{#unless devoured}}
+      {{> burgers/burger-block devoured=true}}
+      {{/unless}}
+      {{/each}}
+    </ul>
   </div>
-  <button type="submit">New Burger</button>
-</form>
+  <div class="col-md-5">
+    <h2>Devoured</h2>
+
+    <ul>
+      {{#each burgers}}
+      {{#if devoured}}
+      {{> burgers/burger-block devoured=false}}
+      {{/if}}
+      {{/each}}
+    </ul>
+  </div>
+</div>
+<div class="row">
+  <h2>Add a Burger</h2>
+  <form class="create-form">
+    <div class="form-group">
+      <label for="burg">Burger:</label>
+      <input type="text" id="burg" name="name">
+    </div>
+    <button type="submit">New Burger</button>
+  </form>
+</div>
