--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -2,3 +2,22 @@ body {
   text-align: center;
   background-color: yellow;
 }
+li {
+  padding: 5px;
+  margin: 5px;
+  background: #faebd7;
+}
+
+.label {
+  font-weight: bold;
+}
+
+.create-update-form {
+  padding: 5px;
+  margin: 5px;
+  background: aqua;
+}
+
+.form-group {
+  margin-bottom: 5px;
+}
