--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,9 @@
 <h1>Eat-Da-Burger</h1>
-<div class="row>">
+<div class="row">
   <div class="col-md-5">
     <h2>Burgers</h2>
 
-    <ul>
+    <ul class="pl-5">
       {{#each burgers}}
       {{#unless devoured}}
       {{> burgers/burger-block devoured=true}}
@@ -14,7 +14,7 @@
   <div class="col-md-5">
     <h2>Devoured</h2>
 
-    <ul>
+    <ul class="pl-5">
       {{#each burgers}}
       {{#if devoured}}
       {{> burgers/burger-block devoured=false}}
@@ -24,9 +24,13 @@
   </div>
 </div>
 <div class="row">
-  <h2>Add a Burger</h2>
-  <form class="create-form">
-    <div class="form-group">
+  <div class="col-md">
+    <h2 class="text-center">Add a Burger</h2>
+  </div>
+</div>
+<div class="col-md">
+  <form class="create-form  justify-content-center mb-4">
+    <div class="form-group justify-content-center">
       <label for="burg">Burger:</label>
       <input type="text" id="burg" name="name">
     </div>
