--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,19 +3,23 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel='stylesheet' , href='assets/css/bootstrap.min.css'>
+  <!--<link rel='stylesheet' , href='assets/css/bootstrap.min.css'>
+  <link rel="stylesheet" href="/assets/css/burger_style.css" /> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="/assets/css/burger_style.css" />
   <script src="https://code.jquery.com/jquery.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+  <!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> -->
   <script src="/assets/js/burgers.js"></script>
   <title>EAT THE BURGER</title>
 </head>
 
 <body>
-  <div><img src="burger.png" , alt="burger image"> </div>
   <div class="container-md">
+    <div><img src="burger.png" , alt="burger image"> </div>
+
 
     {{{ body }}}
 
