minor style changes

--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -2,10 +2,15 @@ body {
   text-align: center;
   background-color: yellow;
 }
+
+ul {
+  list-style-type: none;
+}
 li {
   padding: 5px;
   margin: 5px;
   background: #faebd7;
+  font-weight: bold;
 }
 
 .label {
