--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -31,9 +31,9 @@
 <div class="col-md">
   <form class="create-form  justify-content-center mb-4">
     <div class="form-group justify-content-center">
-      <label for="burg">Burger:</label>
+      <label for="burg"><b>Burger:</b></label>
       <input type="text" id="burg" name="name">
     </div>
-    <button type="submit">New Burger</button>
+    <button type="submit"><b>New Burger</b></button>
   </form>
 </div>
