--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,6 +1,6 @@
 <li>
   {{name}}
   {{#if devoured}}
-  <button class="delete-burger" data-id="{{this.id}}" data-newdevour="{{devoured}}">Devour</button>
+  <button class="delete-burger" data-id="{{this.id}}" data-newdevour="{{devoured}}"><b>Devour</b></button>
   {{/if}}
 </li>
