--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,6 +1,6 @@
 body {
   text-align: center;
-  background-color: yellow;
+  background-color: lightsteelblue;
 }
 
 button {
@@ -13,6 +13,7 @@ li {
   padding: 5px;
   margin: 5px;
   background: #faebd7;
+
   font-weight: bold;
 }
 
