--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,9 @@
 <h1>Eat-Da-Burger</h1>
-<div class="row">
-  <div class="col-md-5">
+<div class="row m-3 p-3">
+  <div class="col-md-6">
     <h2>Burgers</h2>
 
-    <ul class="pl-5">
+    <ul class="pl-2">
       {{#each burgers}}
       {{#unless devoured}}
       {{> burgers/burger-block devoured=true}}
@@ -11,10 +11,10 @@
       {{/each}}
     </ul>
   </div>
-  <div class="col-md-5">
+  <div class="col-md-6">
     <h2>Devoured</h2>
 
-    <ul class="pl-5">
+    <ul class="pl-2">
       {{#each burgers}}
       {{#if devoured}}
       {{> burgers/burger-block devoured=false}}
@@ -23,12 +23,12 @@
     </ul>
   </div>
 </div>
-<div class="row">
+<div class="row mx-3  px-3 ">
   <div class="col-md">
     <h2 class="text-center">Add a Burger</h2>
   </div>
 </div>
-<div class="col-md">
+<div class="col-md mx-3 mb-3 px-3 pb-3">
   <form class="create-form  justify-content-center mb-4">
     <div class="form-group justify-content-center">
       <label for="burg"><b>Burger:</b></label>
